<resources>
    <string name="app_name">ZaoChat</string>

    <string name="app_tab_home">首页</string>
    <string name="app_tab_status">广播</string>
    <string name="app_tab_group">小组</string>
    <string name="app_tab_profile">我的</string>

    <string name="action_create">发起</string>
    <string name="action_file">文件</string>
    <string name="action_create_room">发起聊天室</string>
    <string name="action_diary">日记</string>
    <string name="action_query">查询</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="copy">复制</string>
    <string name="send">发送</string>
    <string name="share">分享</string>
    <string name="store">收藏</string>
    <string name="delete">删除</string>
    <string name="more">更多</string>
    <string name="open">打开</string>

    <string name="note_name">名称</string>
    <string name="note_password">密码</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Zao</string>
    <string name="nav_header_subtitle">zsky@live.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_creating_title">聊天室正在创建中</string>
    <string name="dialog_connecting_title">正在连接聊天室</string>
    <string name="chat_room">聊天室</string>
    <string name="connect">连接</string>
    <string name="chat_room_password">88888888</string>

    <string name="dialog_connect_ssid">test</string>
    <string name="dialog_connect_password_hint">密码</string>
    <string name="dialog_connect_less_than8">密码位数应大于8位</string>
</resources>
