<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title_Style"
        android:text="@string/action_create_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/title_size"
        android:layout_height="@dimen/title_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <ImageView
        android:id="@+id/iv_choosen"
        android:layout_width="@dimen/title_size"
        android:layout_height="@dimen/title_size"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/choosen" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_create_room_name"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_create_room_name"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:text="@string/action_diary"
            android:hint="@string/note_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_create_room_password"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_create_room_name">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_create_room_password"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:text="@string/chat_room_password"
            android:inputType="textPassword"
            android:hint="@string/note_password" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_create_password_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_create_room_password">

        <RadioButton
            android:id="@+id/rb_create_with_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorAccent"
            android:text="有密码"
            android:textColor="@color/colorAccent">

        </RadioButton>

        <RadioButton
            android:id="@+id/rb_create_no_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorAccent"
            android:text="无密码"
            android:textColor="@color/colorAccent">

        </RadioButton>

    </RadioGroup>

    <ImageView
        android:id="@+id/iv_password_see_no"
        android:layout_width="@dimen/title_size"
        android:layout_height="@dimen/title_size"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_create_room_password"
        app:layout_constraintEnd_toEndOf="@+id/til_create_room_password"
        app:layout_constraintTop_toTopOf="@+id/til_create_room_password"
        app:srcCompat="@drawable/unlock" />

</android.support.constraint.ConstraintLayout>